SPIXI/SPIXI/Assets/html/css/spixiui.css
/* ... */
.spixi-optionbar-tab a {
    color: #FFFFFF; 
}
.spixi-optionbar-tab-icon {
    font-size: 20px;
    height: 26px;
}
.spixi-optionbar-label {
    margin-top: 3px;
}

/* DescriptionBar */
.spixi-descriptionbar {
    width: 100%;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;    
}
.spixi-descriptionbar-row {
    padding: 10px;
    font-size:16pt;
}
.spixi-descriptionbar-row-details {
    padding-right: 30px;
    font-size: 9pt;
}
.spixi-descriptionbar.chat {
    background-color: #55516c;
    word-wrap: break-word;
}

/* TabBar */
.spixi-footer {
    /*position: fixed;*/
    height: 64px;
    bottom: 0;
    width: 100%;
    background-color: #ad1457;
    border-top: 1px solid #CC87AB;
}

.spixi-footer-row {
    height: 64px;
    text-decoration: none;
}
.spixi-footer-row a {
 /*   color:#440024;*/
    text-decoration: none;
    display: block;
    width: 100%;
    height: 100%;
}
.spixi-footer-row a:hover {
    color:#fff;
}

.spixi-tab {
    background: #ad1457;
    text-align: center;
    font-size: 13px;
    font-weight: bold;
    color: #3a061d;
}
.spixi-tab-pad {
    padding-top: 11px;
}
.spixi-tab.active {
    color: #FFF;
    background: #950d49;
}
.spixi-tab.active a {
    color: #FFF;
}

.spixi-tab:hover {
    background: #950d49;
}
.spixi-tab a {
    color: #3a061d; 
}
.spixi-tab-icon {
    font-size: 16pt;
    height: 26px;
}

.spixi-footer-chat-unread-indicator {
    display: none;
    border-radius: 10px;
    width: 10px;
    height: 10px;
    box-sizing: border-box;
    background: #66bced;
    border: 1px solid white;
    position: relative;
    margin: -17px auto;
    right: -6px;
}

.unread .spixi-footer-chat-unread-indicator {
    display: block;
}



/* ToastBar */
.spixi-toastbar {
    visibility: hidden;
    min-width: 250px; 
    margin-left: -125px; 
    background-color: #D5016E; 
    color: #fff; 
    text-align: center; 
    border-radius: 20px; 
    padding: 16px; 
    position: fixed; 
    z-index: 100; 
    left: 50%; 
    top: 50%;
    font-size: 11pt;
    font-weight: bold;
}
.spixi-toastbar.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}


/* ErrorBar */
.spixi-errorbar {
    width: 100%;
    height: 32px;
    background-color: #f3aa1d;
    color: #FFFFFF;
    padding-top: 3px;
    font-size: 12pt;
}
.spixi-errorbar.chat
{
    position:fixed;
    z-index: 10;
}
.spixi-errorbar-icon {
    float:left;
    margin-left: 20px;
}
.spixi-errorbar-message {
    margin-left: 60px;
}

/* CallBar */
.spixi-callbar {
    width: 100%;
    position: fixed;
    z-index: 101;
    font-size: 16pt;
    background-color: #443d54;
    color: #FFFFFF;
    padding-top: 3px;
    font-size: 12pt;
}

.spixi-callbar-placeholder {
    width: 90%;
}

.spixi-callbar-title {
    width: 90%;
    color: white;
    font-weight: bold;
    font-size: 18pt;
    margin: 16px auto 0px auto;
}

.spixi-callbar-separator {
    width: 90%;
    height: 2px;

    margin: 20px auto 10px auto;
    background-color: #5b5569;
}

.spixi-callbar-actions
{
    width: 90%;
    font-size: 18pt;
    margin: 0 auto;
    padding-bottom: 10px;
}

.spixi-callbar-duration
{
    font-size: 18pt;
}

/* Buttons */
.spixi-button {
    
    width: 200px;
    height: 46px;
    line-height: 46px;
    
    text-align: center;
    font-size: 14pt;
    font-weight: 400;
    
    color: #fff;
    background: #c2185b;
    border-radius: 50px;
    box-shadow:0px 8px 19px #BBB;
}

.spixi-button:hover {
    background: #d14f82;
}
.spixi-button:active {
    background: #543c83;
    box-shadow: 0px 0px;
}
.spixi-button.disabled {
    background: #d4d4d4;
    color: #949494;
    box-shadow: 0px 0px;
}

.spixi-button.center {
    margin: auto;
}

.spixi-button.padding-left {
    margin-left: 30px;
}
.spixi-button.padding-top {
    margin-top: 20px;
}

.spixi-button.small {
    height:36px;
    line-height: 36px;
    border-radius: 18px;
    font-size: 10pt;
}
.spixi-button.smallwidth {
    width: 160px;
}
.spixi-button.extrasmallwidth {
    width: 140px;
}
.spixi-button.darkshadow {
    box-shadow:0px 8px 19px #333;
}

.spixi-button.ghost {
    background-color: #55516c;
    color: #f7f7f7;
    border: 2px solid #fff;
}
.spixi-button.ghost:hover {
    background-color: #c14c7f;
}
.spixi-button.ghost:active {
    background-color: #901352;
    box-shadow: 0px 0px;
}

.spixi-button.blue {
    background: #1692d9;
}

.spixi-button.blue:hover {
    background: #771250;
}

.spixi-button.large {
    width: 85%;
}

.spixi-button.round {
    width: 64px;
    height: 64px;
    border-radius: 64px;
    box-shadow: 0px 4px 10px #888;

    font-size: 18pt;
    background: #1692d9;

    padding-top: 0px;

    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

#avatar.spixi-button.round {
    width: 96px;
    height: 96px;
    border-radius: 96px;
}

.spixi-button.round:hover {
    background: #66bced;
}
.spixi-button.round:active {
    background: #543c83;
}

.spixi-button.smallround {
    width: 54px;
    height: 54px;
    border-radius: 64px;
    box-shadow: 0px 0px;

    font-size: 18pt;
    background: #1692d9;    
    border: 2px solid #fff;

    padding-top: 0px;

    display: table-cell;
    vertical-align: middle;
    text-align: center;
}
.spixi-button.smallround:hover {
    background: #6abded;
}
.spixi-button.smallround:active {
    background: #543c83;
}

.action-button {
    display: block;
    z-index: 10;  
    position: fixed;
    right: 20px;  
    bottom: 80px;
}

.spixi-avatar {
    width: 96px;
    height: 96px;
    border-radius: 96px;
    object-fit: cover;
}

/* TextField */
.spixi-textfield {
    width: 100%;
    height: 44px;
    
    background: #FFF;
    border: solid 1px #A19BAC;
    outline: none;
    border-radius: 64px;
    
    color: #000;
    padding-left: 12px;
    padding-right: 12px;
}
.spixi-textfield:focus {
    border: solid 1px #CA008E;
}
/* ... */

